force-app/main/default/objects/Manage_Automated_Business_Processes__c/Manage_Automated_Business_Processes__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Manage Automated Business Processes</label>
</CustomObject>