force-app/main/default/objects/Manage_Automated_Business_Processes__c/fields/Skip_Process_Builders__c.field-meta.xml
<CustomField>
    <fullName>Skip_Process_Builders__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Skip Process Builders</label>
    <type>Checkbox</type>
</CustomField>