force-app/main/default/objects/Manage_Automated_Business_Processes__c/fields/Skip_Validation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation Rules</label>
    <type>Checkbox</type>
</CustomField>