force-app/main/default/objects/Manage_Automated_Business_Processes__c/fields/Skip_Workflow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Skip_Workflow_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>