force-app/main/default/objects/Manage_Automated_Business_Processes__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Skip_Validation__c</columns>
    <columns>Skip_Workflow_Rules__c</columns>
    <columns>Skip_Process_Builders__c</columns>
    <columns>Skip_Triggers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>